--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
 services:
-  app:
-    build: .
+  backend:
+    build: ./backend
     ports:
       - "8000:8000"
     depends_on:
       - db
+  frontend:
+    build:
+      ./frontend
+    ports:
+      - "3000:5173"
+    depends_on:
+      - backend
   db:
     image: postgres:15
     environment:
@@ -18,7 +25,7 @@ services:
     ports:
       - "6379:6379"
   celery_worker:
-    build: .
+    build: ./backend
     command: celery -A celery_worker.celery_app worker --loglevel=info
     depends_on:
       - redis
